--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -659,6 +659,8 @@
   "macros.combat.dialog.applyAndCloseButton.title": "Aplicar y salir",
   "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Aplicar cambios como los puntos de fatiga usados o el daño en las fichas de los personajes implicados",
   "macros.combat.dialog.at.title": "TA",
+  "macros.combat.dialog.at.tooltip": "TA",
+  "macros.combat.dialog.at.label": "TA",
   "macros.combat.dialog.attack.title": "Ataque",
   "macros.combat.dialog.attack.label": "HA",
   "macros.combat.dialog.attack.tooltip": "Ataque",
@@ -740,6 +742,12 @@
   "macros.combat.dialog.error.yourSelf.title": "¡No puedes atacarte a ti mismo!",
   "macros.combat.dialog.fatigue.title": "Puntos de cansancio",
   "macros.combat.dialog.fatigueUsed.title": "Fatiga usada",
+  "macros.combat.dialog.gm.ability.physic.tooltip": "Ataque",
+  "macros.combat.dialog.gm.ability.physic.label": "HA",
+  "macros.combat.dialog.gm.ability.magic.tooltip": "Proyección Mágica",
+  "macros.combat.dialog.gm.ability.magic.label": "PM",
+  "macros.combat.dialog.gm.ability.psychic.tooltip": "Proyección Psíquica",
+  "macros.combat.dialog.gm.ability.psychic.label": "PP",
   "macros.combat.dialog.gm.psychicPower.title": "Poder",
   "macros.combat.dialog.gm.psychicPotential.title": "Potencial",
   "macros.combat.dialog.gm.projection.title": "Proyección",
@@ -777,6 +785,7 @@
   "macros.combat.dialog.mentalPatternImbalance.title": "Desequilibrio de Patrón Mental",
   "macros.combat.dialog.requestPermission.title": " te ha enviado una petición de ataque hacia ",
   "macros.combat.dialog.rolled.title": "Tirada del dado",
+  "macros.combat.dialog.rolled.tooltip": "Tirada del dado",
   "macros.combat.dialog.showResultsButton.title": "Enviar al chat los resultados",
   "macros.combat.dialog.showRoll.title": "Mostrar tirada",
   "macros.combat.dialog.combat.accumulateDefenses.title": "Acumular defensa",
