--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -579,9 +579,14 @@
   "dialogs.items.weapons.content": "Nom de l'Arme",
   "dialogs.mod.content": "Modificateur",
   "dialogs.title": "Dialogue",
+  "macros.combat.dialog.gm.ability.physic.title": "Attaque",
+  "macros.combat.dialog.gm.ability.magic.title": "Projection Magique",
+  "macros.combat.dialog.gm.ability.psychic.title": "Projection Psychique",
   "macros.combat.dialog.applyAndCloseButton.title": "Appliquer et fermer",
   "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Appliquer les changements chez les acteurs, tels que les points de fatigue utilisés ou les dégâts sur les fiches de personnages concernés",
   "macros.combat.dialog.at.title": "IP",
+  "macros.combat.dialog.at.tooltip": "IP",
+  "macros.combat.dialog.at.label": "IP",
   "macros.combat.dialog.attack.title": "Attaque",
   "macros.combat.dialog.attack.label": "HA",
   "macros.combat.dialog.attack.tooltip": "Attaque",
@@ -661,6 +666,7 @@
   "macros.combat.dialog.psychicProjection.title": "Projection Psychique",
   "macros.combat.dialog.requestPermission.title": " permission d'attaquer ",
   "macros.combat.dialog.rolled.title": "Dés lancés",
+  "macros.combat.dialog.rolled.tooltip": "Dés lancés",
   "macros.combat.dialog.showResultsButton.title": "Envoyer au chat les résultats",
   "macros.combat.dialog.showRoll.title": "Montrer le jet",
   "macros.combat.dialog.surprised.title": "Surpris",
