--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -36,33 +36,25 @@
   "anima.ui.combat.armors.at.cold.base.title": "COL",
   "anima.ui.combat.armors.at.cold.title": "COL",
   "anima.ui.combat.armors.at.cold.label": "COL",
-  "anima.ui.combat.armors.at.cold.tooltip": "COL",
   "anima.ui.combat.armors.at.cut.base.title": "CUT",
   "anima.ui.combat.armors.at.cut.title": "CUT",
   "anima.ui.combat.armors.at.cut.label": "CUT",
-  "anima.ui.combat.armors.at.cut.tooltip": "CUT",
   "anima.ui.combat.armors.at.electricity.base.title": "ELE",
   "anima.ui.combat.armors.at.electricity.title": "ELE",
   "anima.ui.combat.armors.at.electricity.label": "ELE",
-  "anima.ui.combat.armors.at.electricity.tooltip": "ELE",
   "anima.ui.combat.armors.at.energy.base.title": "ENE",
   "anima.ui.combat.armors.at.energy.title": "ENE",
   "anima.ui.combat.armors.at.energy.label": "ENE",
-  "anima.ui.combat.armors.at.energy.tooltip": "ENE",
   "anima.ui.combat.armors.at.heat.base.title": "HEA",
   "anima.ui.combat.armors.at.heat.title": "HEA",
   "anima.ui.combat.armors.at.heat.label": "HEA",
-  "anima.ui.combat.armors.at.heat.tooltip": "HEA",
   "anima.ui.combat.armors.at.impact.base.title": "IMP",
   "anima.ui.combat.armors.at.impact.title": "IMP",
   "anima.ui.combat.armors.at.impact.label": "IMP",
-  "anima.ui.combat.armors.at.impact.tooltip": "IMP",
   "anima.ui.combat.armors.at.thrust.base.title": "THR",
   "anima.ui.combat.armors.at.thrust.title": "THR",
   "anima.ui.combat.armors.at.thrust.label": "THR",
-  "anima.ui.combat.armors.at.thrust.tooltip": "THR",
   "anima.ui.combat.armors.at.none.label": "-",
-  "anima.ui.combat.armors.at.none.tooltip": "-",
   "anima.ui.combat.armors.at.none.title": "-",
   "anima.ui.combat.armors.equipped.title": "Equipped?",
   "anima.ui.combat.armors.integrity.base.title": "Base integrity",
@@ -664,7 +656,6 @@
   "macros.combat.dialog.at.title": "AT",
   "macros.combat.dialog.attack.title": "Attack",
   "macros.combat.dialog.attack.label": "AA",
-  "macros.combat.dialog.attack.tooltip": "Attack",
   "macros.combat.dialog.attackButton.title": "Send attack",
   "macros.combat.dialog.attackConfirm.body.title": "Do you want to attack {target}?",
   "macros.combat.dialog.attackConfirm.title": "Confirm attack",
@@ -706,7 +697,6 @@
   "macros.combat.dialog.castOverride.title": "Cast spell without validations",
   "macros.combat.dialog.critic.title": "Critic",
   "macros.combat.dialog.damage.title": "Damage",
-  "macros.combat.dialog.damage.tooltip": "Damage",
   "macros.combat.dialog.psychic.damageModifier.title": "Damage modifier",
   "macros.combat.dialog.damageDeal.title": "Damage deal",
   "macros.combat.dialog.defend.title": "Defense",
@@ -817,7 +807,7 @@
   "macros.damageCalculator.dialog.damage.title": "Damage",
   "macros.damageCalculator.dialog.defense.title": "Defense",
   "macros.damageCalculator.dialog.ta.title": "AT",
-  "macros.combat.dialog.at.tooltip": "AT",
+  "macros.damageCalculator.dialog.at.title": "AT",
   "macros.combat.dialog.at.label": "AT",
   "macros.damageCalculator.dialog.title": "Damage calculator"
 }
