--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -36,34 +36,26 @@
   "anima.ui.combat.armors.at.cold.base.title": "FRI base",
   "anima.ui.combat.armors.at.cold.title": "FRI",
   "anima.ui.combat.armors.at.cold.label": "FRI",
-  "anima.ui.combat.armors.at.cold.tooltip": "FRI",
   "anima.ui.combat.armors.at.cut.base.title": "FIL base",
   "anima.ui.combat.armors.at.cut.title": "FIL",
   "anima.ui.combat.armors.at.cut.label": "FIL",
-  "anima.ui.combat.armors.at.cut.tooltip": "FIL",
   "anima.ui.combat.armors.at.electricity.base.title": "ELE base",
   "anima.ui.combat.armors.at.electricity.title": "ELE",
   "anima.ui.combat.armors.at.electricity.label": "ELE",
-  "anima.ui.combat.armors.at.electricity.tooltip": "ELE",
   "anima.ui.combat.armors.at.energy.base.title": "ENE base",
   "anima.ui.combat.armors.at.energy.title": "ENE",
   "anima.ui.combat.armors.at.energy.label": "ENE",
-  "anima.ui.combat.armors.at.energy.tooltip": "ENE",
   "anima.ui.combat.armors.at.heat.base.title": "CAL base",
   "anima.ui.combat.armors.at.heat.title": "CAL",
   "anima.ui.combat.armors.at.heat.label": "CAL",
-  "anima.ui.combat.armors.at.heat.tooltip": "CAL",
   "anima.ui.combat.armors.at.impact.base.title": "CON base",
   "anima.ui.combat.armors.at.impact.title": "CON",
   "anima.ui.combat.armors.at.impact.label": "CON",
-  "anima.ui.combat.armors.at.impact.tooltip": "CON",
   "anima.ui.combat.armors.at.thrust.base.title": "PEN base",
   "anima.ui.combat.armors.at.thrust.title": "PEN",
   "anima.ui.combat.armors.at.thrust.label": "PEN",
-  "anima.ui.combat.armors.at.thrust.tooltip": "PEN",
   "anima.ui.combat.armors.at.none.title": "-",
   "anima.ui.combat.armors.at.none.label": "-",
-  "anima.ui.combat.armors.at.none.tooltip": "-",
   "anima.ui.combat.armors.equipped.title": "¿Equipada?",
   "anima.ui.combat.armors.integrity.base.title": "Entereza base",
   "anima.ui.combat.armors.integrity.title": "Entereza",
@@ -662,11 +654,9 @@
   "macros.combat.dialog.applyAndCloseButton.title": "Aplicar y salir",
   "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Aplicar cambios como los puntos de fatiga usados o el daño en las fichas de los personajes implicados",
   "macros.combat.dialog.at.title": "TA",
-  "macros.combat.dialog.at.tooltip": "TA",
   "macros.combat.dialog.at.label": "TA",
   "macros.combat.dialog.attack.title": "Ataque",
   "macros.combat.dialog.attack.label": "HA",
-  "macros.combat.dialog.attack.tooltip": "Ataque",
   "macros.combat.dialog.attackButton.title": "Enviar ataque",
   "macros.combat.dialog.attackConfirm.body.title": "¿Quieres atacar a {target}?",
   "macros.combat.dialog.attackConfirm.title": "Confirmar ataque",
@@ -708,7 +698,6 @@
   "macros.combat.dialog.castOverride.title": "Lanzar conjuro sin validaciones",
   "macros.combat.dialog.critic.title": "Crítico",
   "macros.combat.dialog.damage.title": "Daño",
-  "macros.combat.dialog.damage.tooltip": "Daño",
   "macros.combat.dialog.psychic.damageModifier.title": "Modificador al daño",
   "macros.combat.dialog.damageDeal.title": "Daño hecho",
   "macros.combat.dialog.defend.title": "Defensa",
@@ -745,11 +734,11 @@
   "macros.combat.dialog.error.yourSelf.title": "¡No puedes atacarte a ti mismo!",
   "macros.combat.dialog.fatigue.title": "Puntos de cansancio",
   "macros.combat.dialog.fatigueUsed.title": "Fatiga usada",
-  "macros.combat.dialog.gm.ability.physic.tooltip": "Ataque",
+  "macros.combat.dialog.gm.ability.physic.title": "Ataque",
   "macros.combat.dialog.gm.ability.physic.label": "HA",
-  "macros.combat.dialog.gm.ability.magic.tooltip": "Proyección Mágica",
+  "macros.combat.dialog.gm.ability.magic.title": "Proyección Mágica",
   "macros.combat.dialog.gm.ability.magic.label": "PM",
-  "macros.combat.dialog.gm.ability.psychic.tooltip": "Proyección Psíquica",
+  "macros.combat.dialog.gm.ability.psychic.title": "Proyección Psíquica",
   "macros.combat.dialog.gm.ability.psychic.label": "PP",
   "macros.combat.dialog.gm.psychicPower.title": "Poder",
   "macros.combat.dialog.gm.psychicPotential.title": "Potencial",
@@ -788,7 +777,6 @@
   "macros.combat.dialog.mentalPatternImbalance.title": "Desequilibrio de Patrón Mental",
   "macros.combat.dialog.requestPermission.title": " te ha enviado una petición de ataque hacia ",
   "macros.combat.dialog.rolled.title": "Tirada del dado",
-  "macros.combat.dialog.rolled.tooltip": "Tirada del dado",
   "macros.combat.dialog.showResultsButton.title": "Enviar al chat los resultados",
   "macros.combat.dialog.showRoll.title": "Mostrar tirada",
   "macros.combat.dialog.combat.accumulateDefenses.title": "Acumular defensa",
@@ -825,5 +813,6 @@
   "macros.damageCalculator.dialog.damage.title": "Daño",
   "macros.damageCalculator.dialog.defense.title": "Defensa",
   "macros.damageCalculator.dialog.ta.title": "TA",
+  "macros.damageCalculator.dialog.at.title": "TA",
   "macros.damageCalculator.dialog.title": "Calculadora de daño"
 }
