docs(ABFActor): some docs and types added to actor class

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -433,7 +433,7 @@
   "anima.ui.psychic.psychicPowers.power.header.macro.title": "Macro",
   "anima.ui.psychic.psychicPowers.title": "Poderes Psíquicos",
   "anima.ui.psychic.psychicProjection.projection.title": "Proyección",
-  "anima.ui.psychic.psychicProjection.title": "Projecc. Psíquica",
+  "anima.ui.psychic.psychicProjection.title": "Proyección Psíquica",
   "anima.ui.psychic.psychicProjection.defensive.rollMessage": "proyección psíquica defensiva",
   "anima.ui.psychic.psychicProjection.defensive.title": "Defensiva",
   "anima.ui.psychic.psychicProjection.final.rollMessage": "proyección psíquica",
