fix: added combat modifiers localization

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -676,8 +676,10 @@
   "macros.combat.dialog.button.defense.title": "Defend",
   "macros.combat.dialog.button.attack.title": "Attack",
   "macros.combat.dialog.cancelButton.title": "Cancel",
+  "macros.combat.dialog.combatMod.special.title": "Special",
   "macros.combat.dialog.combatMod.modifier.title": "Modifier",
   "macros.combat.dialog.combatMod.blindness.title": "Absolute blindness",
+  "macros.combat.dialog.combatMod.partialBlindness.title": "Partial blindness",
   "macros.combat.dialog.combatMod.dodgeProjectile.title": "Dodge vs. projectile",
   "macros.combat.dialog.combatMod.parryProjectile.title": "Parry vs. projectile",
   "macros.combat.dialog.combatMod.maestryParryProjectile.title": "Maestry parry vs. projectile",
@@ -689,7 +691,7 @@
   "macros.combat.dialog.combatMod.targetInCover.title": "Target in cover",
   "macros.combat.dialog.combatMod.secondaryCritic.title": "Secondary critic used",
   "macros.combat.dialog.combatMod.multipleDefensesPenalty.title": "Defense penalty",
-  "macros.combat.dialog.combatMod.fatigueUsed.title": "Used fatigue",
+  "macros.combat.dialog.combatMod.fatigue.title": "Used fatigue",
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
   "macros.combat.dialog.rollResistanceButton.title": "Roll Resistance",
