--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -677,8 +677,10 @@
   "macros.combat.dialog.button.defense.title": "Defender",
   "macros.combat.dialog.button.attack.title": "Atacar",
   "macros.combat.dialog.cancelButton.title": "Cancelar",
+  "macros.combat.dialog.combatMod.special.title": "Especial",
   "macros.combat.dialog.combatMod.modifier.title": "Modificador",
   "macros.combat.dialog.combatMod.blindness.title": "Ceguera absoluta",
+  "macros.combat.dialog.combatMod.partialBlindness.title": "Ceguera parcial",
   "macros.combat.dialog.combatMod.dodgeProjectile.title": "Esquivar contra proyectil",
   "macros.combat.dialog.combatMod.parryProjectile.title": "Parar contra proyectil",
   "macros.combat.dialog.combatMod.maestryParryProjectile.title": "Parar con maestria contra proyectil",
@@ -690,7 +692,7 @@
   "macros.combat.dialog.combatMod.targetInCover.title": "Blanco en cobertura",
   "macros.combat.dialog.combatMod.secondaryCritic.title": "Usar crítico secundario",
   "macros.combat.dialog.combatMod.multipleDefensesPenalty.title": "Penalizador por defensa continua",
-  "macros.combat.dialog.combatMod.fatigueUsed.title": "Fatiga usada",
+  "macros.combat.dialog.combatMod.fatigue.title": "Fatiga usada",
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
   "macros.combat.dialog.rollResistanceButton.title": "Tirada de Resistencia",
