fix(localization): Corrected localization for combat modifiers.

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -682,16 +682,16 @@
   "macros.combat.dialog.combatMod.blindness.title": "Ceguera absoluta",
   "macros.combat.dialog.combatMod.partialBlindness.title": "Ceguera parcial",
   "macros.combat.dialog.combatMod.dodgeProjectile.title": "Esquivar contra proyectil",
-  "macros.combat.dialog.combatMod.parryProjectile.title": "Parar contra proyectil",
-  "macros.combat.dialog.combatMod.maestryParryProjectile.title": "Parar con maestria contra proyectil",
-  "macros.combat.dialog.combatMod.shieldParryProjectile.title": "Parar con escudo contra proyectil",
-  "macros.combat.dialog.combatMod.parryThrow.title": "Parar contra lanzamiento",
+  "macros.combat.dialog.combatMod.blockProjectile.title": "Parar contra proyectil",
+  "macros.combat.dialog.combatMod.maestryBlockProjectile.title": "Parar con maestria contra proyectil",
+  "macros.combat.dialog.combatMod.shieldBlockProjectile.title": "Parar con escudo contra proyectil",
+  "macros.combat.dialog.combatMod.blockThrown.title": "Parar contra lanzamiento",
   "macros.combat.dialog.combatMod.pointBlank.title": "Disparar a bocajarro",
   "macros.combat.dialog.combatMod.highGround.title": "Posición superior",
   "macros.combat.dialog.combatMod.poorVisibility.title": "Escasa visibilidad",
   "macros.combat.dialog.combatMod.targetInCover.title": "Blanco en cobertura",
   "macros.combat.dialog.combatMod.secondaryCritic.title": "Usar crítico secundario",
-  "macros.combat.dialog.combatMod.multipleDefensesPenalty.title": "Penalizador por defensa continua",
+  "macros.combat.dialog.combatMod.cumulativeDefenses.title": "Penalizador por defensa continua",
   "macros.combat.dialog.combatMod.fatigue.title": "Fatiga usada",
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
