--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -681,16 +681,16 @@
   "macros.combat.dialog.combatMod.blindness.title": "Absolute blindness",
   "macros.combat.dialog.combatMod.partialBlindness.title": "Partial blindness",
   "macros.combat.dialog.combatMod.dodgeProjectile.title": "Dodge vs. projectile",
-  "macros.combat.dialog.combatMod.parryProjectile.title": "Parry vs. projectile",
-  "macros.combat.dialog.combatMod.maestryParryProjectile.title": "Maestry parry vs. projectile",
-  "macros.combat.dialog.combatMod.shieldParryProjectile.title": "Shield Parry vs. projectile",
-  "macros.combat.dialog.combatMod.parryThrow.title": "Parry vs. throw",
+  "macros.combat.dialog.combatMod.blockProjectile.title": "Block vs. projectile",
+  "macros.combat.dialog.combatMod.maestryBlockProjectile.title": "Maestry block vs. projectile",
+  "macros.combat.dialog.combatMod.shieldBlockProjectile.title": "Shield block vs. projectile",
+  "macros.combat.dialog.combatMod.blockThrown.title": "Block vs. throw",
   "macros.combat.dialog.combatMod.pointBlank.title": "Shoot at point blank range",
   "macros.combat.dialog.combatMod.highGround.title": "High ground",
   "macros.combat.dialog.combatMod.poorVisibility.title": "Poor visibility",
   "macros.combat.dialog.combatMod.targetInCover.title": "Target in cover",
   "macros.combat.dialog.combatMod.secondaryCritic.title": "Secondary critic used",
-  "macros.combat.dialog.combatMod.multipleDefensesPenalty.title": "Defense penalty",
+  "macros.combat.dialog.combatMod.cumulativeDefenses.title": "Defense penalty",
   "macros.combat.dialog.combatMod.fatigue.title": "Used fatigue",
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
