feat(ResultsDialog): more development on the results dialog

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -740,6 +740,12 @@
   "macros.combat.dialog.error.yourSelf.title": "¡No puedes atacarte a ti mismo!",
   "macros.combat.dialog.fatigue.title": "Puntos de cansancio",
   "macros.combat.dialog.fatigueUsed.title": "Fatiga usada",
+  "macros.combat.dialog.gm.modifiers.title": "Modificadores",
+  "macros.combat.dialog.gm.results.title": "Resultado del asalto",
+  "macros.combat.dialog.gm.ability.block.title": "Parada",
+  "macros.combat.dialog.gm.ability.block.label": "HP",
+  "macros.combat.dialog.gm.ability.dodge.title": "Esquiva",
+  "macros.combat.dialog.gm.ability.dodge.label": "HE",
   "macros.combat.dialog.gm.ability.physic.title": "Ataque",
   "macros.combat.dialog.gm.ability.physic.label": "HA",
   "macros.combat.dialog.gm.ability.magic.title": "Proyección Mágica",
