feat: translations updated for en/fr ResultsDialog

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -737,6 +737,10 @@
   "macros.combat.dialog.error.yourSelf.title": "Can't attack yourself!",
   "macros.combat.dialog.fatigue.title": "Fatigue points",
   "macros.combat.dialog.fatigueUsed.title": "Used fatigue",
+  "macros.combat.dialog.gm.modifiers.title": "Modifiers",
+  "macros.combat.dialog.gm.results.title": "Combat result",
+  "macros.combat.dialog.gm.ability.block.title": "Block",
+  "macros.combat.dialog.gm.ability.dodge.title": "Dodge",
   "macros.combat.dialog.gm.ability.physic.title": "Attack",
   "macros.combat.dialog.gm.ability.magic.title": "Magic Projection",
   "macros.combat.dialog.gm.ability.psychic.title": "Psychic Projection",
