--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -575,9 +575,6 @@
   "dialogs.items.weapons.content": "Nom de l'Arme",
   "dialogs.mod.content": "Modificateur",
   "dialogs.title": "Dialogue",
-  "macros.combat.dialog.gm.ability.physic.title": "Attaque",
-  "macros.combat.dialog.gm.ability.magic.title": "Projection Magique",
-  "macros.combat.dialog.gm.ability.psychic.title": "Projection Psychique",
   "macros.combat.dialog.applyAndCloseButton.title": "Appliquer et fermer",
   "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Appliquer les changements chez les acteurs, tels que les points de fatigue utilisés ou les dégâts sur les fiches de personnages concernés",
   "macros.combat.dialog.at.title": "IP",
@@ -637,6 +634,13 @@
   "macros.combat.dialog.error.yourSelf.title": "Vous ne pouvez pas vous attaquer vous-même !",
   "macros.combat.dialog.fatigue.title": "Points de Fatigue",
   "macros.combat.dialog.fatigueUsed.title": "Fatigue utilisée",
+  "macros.combat.dialog.gm.modifiers.title": "Modifiers",
+  "macros.combat.dialog.gm.results.title": "Résultat du Combat",
+  "macros.combat.dialog.gm.ability.block.title": "Parade",
+  "macros.combat.dialog.gm.ability.dodge.title": "Esquive",
+  "macros.combat.dialog.gm.ability.physic.title": "Attaque",
+  "macros.combat.dialog.gm.ability.magic.title": "Projection Magique",
+  "macros.combat.dialog.gm.ability.psychic.title": "Projection Psychique",
   "macros.combat.dialog.magicAttack.title": "Lancer le sort <b>{spell}</b> sur {target}",
   "macros.combat.dialog.magicDefense.title": "Lancer le sort <b>{spell}</b> pour se défendre de {target}",
   "macros.combat.dialog.magicProjection.defensive.title": "Défensive",
