feat(CombatResultsDialog): adding supernatural shield damage

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -796,8 +796,10 @@
   "macros.combat.dialog.throw.title": "Throw",
   "macros.combat.dialog.melee.title": "Melee",
   "macros.combat.dialog.total.title": "Total",
-  "macros.combat.dialog.dobleDamage.title": "Shield takes double damage",
-  "macros.combat.dialog.immuneToDamage.title": "Shield immune to damage type",
+  "macros.combat.dialog.supernaturalShield.damage.title": "Shield damage",
+  "macros.combat.dialog.supernaturalShield.normalDamage.title": "Shield takes normal damage",
+  "macros.combat.dialog.supernaturalShield.doubleDamage.title": "Shield takes double damage",
+  "macros.combat.dialog.supernaturalShield.immuneDamage.title": "Shield immune to damage type",
   "macros.combat.dialog.unarmed.title": "Unarmed",
   "macros.combat.dialog.waitRequest.title": "Attack request sent. Waiting for DM response...",
   "macros.combat.dialog.waitingAttack.title": "Waiting for attacker...",
