--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -804,8 +804,10 @@
   "macros.combat.dialog.throw.title": "Lanzar",
   "macros.combat.dialog.melee.title": "Cuerpo a cuerpo",
   "macros.combat.dialog.total.title": "Total",
-  "macros.combat.dialog.dobleDamage.title": "Escudo recibe el doble de daño",
-  "macros.combat.dialog.immuneToDamage.title": "Escudo inmune al tipo de daño",
+  "macros.combat.dialog.supernaturalShield.damage.title": "Daño a escudo",
+  "macros.combat.dialog.supernaturalShield.normalDamage.title": "Escudo recibe el daño base",
+  "macros.combat.dialog.supernaturalShield.doubleDamage.title": "Escudo recibe el doble de daño base",
+  "macros.combat.dialog.supernaturalShield.immuneDamage.title": "Escudo inmune al tipo de daño",
   "macros.combat.dialog.unarmed.title": "Desarmado",
   "macros.combat.dialog.waitRequest.title": "Petición de ataque enviada. Esperando respuesta del GM...",
   "macros.combat.dialog.waitingAttack.title": "Esperando por el atacante...",
