--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -595,7 +595,23 @@
   "macros.combat.dialog.blockButton.title": "Essayez de Bloquer",
   "macros.combat.dialog.blockValue.title": "Valeur de Parade",
   "macros.combat.dialog.cancelButton.title": "Annulation",
-  "macros.combat.dialog.counterAttackBonus.title": "Bonus de Contre-attaque",
+  "macros.combat.dialog.combatMod.special.title": "Special",
+  "macros.combat.dialog.combatMod.modifier.title": "Modifier",
+  "macros.combat.dialog.combatMod.blindness.title": "Absolute blindness",
+  "macros.combat.dialog.combatMod.partialBlindness.title": "Partial blindness",
+  "macros.combat.dialog.combatMod.dodgeProjectile.title": "Dodge vs. projectile",
+  "macros.combat.dialog.combatMod.blockProjectile.title": "Block vs. projectile",
+  "macros.combat.dialog.combatMod.maestryBlockProjectile.title": "Maestry block vs. projectile",
+  "macros.combat.dialog.combatMod.shieldBlockProjectile.title": "Shield block vs. projectile",
+  "macros.combat.dialog.combatMod.blockThrown.title": "Block vs. throw",
+  "macros.combat.dialog.combatMod.pointBlank.title": "Shoot at point blank range",
+  "macros.combat.dialog.combatMod.highGround.title": "High ground",
+  "macros.combat.dialog.combatMod.poorVisibility.title": "Poor visibility",
+  "macros.combat.dialog.combatMod.targetInCover.title": "Target in cover",
+  "macros.combat.dialog.combatMod.secondaryCritic.title": "Critique 2",
+  "macros.combat.dialog.combatMod.cumulativeDefenses.title": "Defense penalty",
+  "macros.combat.dialog.combatMod.fatigue.title": "Fatigue utilisée",
+  "macros.combat.dialog.combatMod.counterattackBonus.title": "Bonus de Contre-attaque",
   "macros.combat.dialog.counterAttackButton.title": "Contre-attaque",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Cette option déclenche une nouvelle attaque du défenseur",
   "macros.combat.dialog.critic.title": "Critique",
