fix(combat): update counterattack to counterAttack and add missing localization

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -691,9 +691,10 @@
   "macros.combat.dialog.combatMod.poorVisibility.title": "Escasa visibilidad",
   "macros.combat.dialog.combatMod.targetInCover.title": "Blanco en cobertura",
   "macros.combat.dialog.combatMod.secondaryCritic.title": "Usar crítico secundario",
-  "macros.combat.dialog.combatMod.cumulativeDefenses.title": "Penalizador por defensa continua",
+  "macros.combat.dialog.combatMod.cumulativeDefenses.title": "Defensa adicional",
   "macros.combat.dialog.combatMod.fatigue.title": "Fatiga usada",
-  "macros.combat.dialog.combatMod.counterattackBonus.title": "Bono al contraataque",
+  "macros.combat.dialog.combatMod.counterAttackBonus.title": "Bono al contraataque",
+  "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
   "macros.combat.dialog.rollResistanceButton.title": "Tirada de Resistencia",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Esta opción permitirá al defensor realizar un contraataque directamente",
