--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -611,7 +611,8 @@
   "macros.combat.dialog.combatMod.secondaryCritic.title": "Critique 2",
   "macros.combat.dialog.combatMod.cumulativeDefenses.title": "Defense penalty",
   "macros.combat.dialog.combatMod.fatigue.title": "Fatigue utilisée",
-  "macros.combat.dialog.combatMod.counterattackBonus.title": "Bonus de Contre-attaque",
+  "macros.combat.dialog.combatMod.counterAttackBonus.title": "Bonus de Contre-attaque",
+  "macros.combat.dialog.counterAttackBonus.title": "Bonus de Contre-attaque",
   "macros.combat.dialog.counterAttackButton.title": "Contre-attaque",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Cette option déclenche une nouvelle attaque du défenseur",
   "macros.combat.dialog.critic.title": "Critique",
