fix(combat): psychicFatigue in PsychicAttack and PsychicDefense

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -445,6 +445,7 @@
   "anima.ui.psychic.psychicProjection.imbalance.title": "Desequilibrio",
   "anima.ui.psychic.psychicProjection.offensive.rollMessage": "proyección psíquica ofensiva",
   "anima.ui.psychic.psychicProjection.offensive.title": "Ofensiva",
+  "anima.ui.psychic.psychicFatigue.title": "Fatiga",
   "anima.ui.psychic.tabs.main": "Principal",
   "anima.ui.psychic.tabs.secondaries": "Poderes",
   "anima.ui.resistances.disease": "Enfermedades",
