--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -413,6 +413,7 @@
   "anima.ui.psychic.psychicProjection.imbalance.title": "Déséquilibré",
   "anima.ui.psychic.psychicProjection.offensive.rollMessage": "projection psychique offensive",
   "anima.ui.psychic.psychicProjection.offensive.title": "Offensive",
+  "anima.ui.psychic.psychicFatigue.title": "Fatigue",
   "anima.ui.psychic.tabs.main": "Principal",
   "anima.ui.psychic.tabs.secondaries": "Pouvoirs",
   "anima.ui.resistances.disease": "Maladies",
