--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -443,6 +443,7 @@
   "anima.ui.psychic.psychicProjection.imbalance.title": "Imbalance",
   "anima.ui.psychic.psychicProjection.offensive.rollMessage": "offensive psychic projection",
   "anima.ui.psychic.psychicProjection.offensive.title": "Offensive",
+  "anima.ui.psychic.psychicFatigue.title": "Fatigue",
   "anima.ui.psychic.tabs.main": "Main",
   "anima.ui.psychic.tabs.secondaries": "Powers",
   "anima.ui.resistances.disease": "Disease",
