feat: add supernaturalShield item sheet

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -143,7 +143,11 @@
   "anima.ui.combat.weapons.weaponStrength.title": "Weapon STR",
   "anima.ui.combat.supernaturalShields.origin.title": "Origin",
   "anima.ui.combat.supernaturalShields.shieldPoints.title": "Life points",
+  "anima.ui.combat.supernaturalShields.damageBarrier.title": "Damage barrier",
   "anima.ui.combat.supernaturalShields.name.title": "Shield",
+  "anima.ui.combat.supernaturalShields.type.mystic.title": "Mystic",
+  "anima.ui.combat.supernaturalShields.type.psychic.title": "Psychic",
+  "anima.ui.combat.supernaturalShields.type.title": "Tipo",
   "anima.ui.combat.supernaturalShields.title": "Supernatural shields",
   "anima.ui.contactSection.contactRow.description": "Description",
   "anima.ui.contactSection.contactRow.name": "Name",
