--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -143,7 +143,11 @@
   "anima.ui.combat.weapons.weaponStrength.title": "FUE Arma",
   "anima.ui.combat.supernaturalShields.origin.title": "Origen",
   "anima.ui.combat.supernaturalShields.shieldPoints.title": "Puntos de vida",
+  "anima.ui.combat.supernaturalShields.damageBarrier.title": "Barrera de daño",
   "anima.ui.combat.supernaturalShields.name.title": "Escudo",
+  "anima.ui.combat.supernaturalShields.type.mystic.title": "Místico",
+  "anima.ui.combat.supernaturalShields.type.psychic.title": "Psíquico",
+  "anima.ui.combat.supernaturalShields.type.title": "Type",
   "anima.ui.combat.supernaturalShields.title": "Escudos Sobrenaturales",
   "anima.ui.contactSection.contactRow.description": "Descripción",
   "anima.ui.contactSection.contactRow.name": "Nombre",
