--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -798,6 +798,7 @@
   "macros.combat.dialog.requestPermission.title": " te ha enviado una petición de ataque hacia ",
   "macros.combat.dialog.rolled.title": "Tirada del dado",
   "macros.combat.dialog.showResultsButton.title": "Enviar al chat los resultados",
+  "macros.combat.dialog.showResultsButton.button.title": "Enviar al chat",
   "macros.combat.dialog.showRoll.title": "Mostrar tirada",
   "macros.combat.dialog.combat.accumulateDefenses.title": "Acumular defensa",
   "macros.combat.dialog.surprised.title": "Sorprendido",
