--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -561,6 +561,8 @@
   "anima.ui.systemSettings.missValueAttackMacro.hint.title": "When executing a macro in combat, a failure argument is sent; if the HA value is less than the Failure value and the defender won the combat, it is considered that the attack failed (used in animations)",
   "anima.ui.systemSettings.useIconLabels.title": "Use icons as labels",
   "anima.ui.systemSettings.useIconLabels.hint.title": "Whether to use icons (default) or titles for labels inside dialogs and sheets.",
+  "anima.ui.systemSettings.combatModifiersExpanded.title": "Expand combat modifiers",
+  "anima.ui.systemSettings.combatModifiersExpanded.hint.title": "If enabled, the Combat Modifiers section in the combat interface will be expanded by default.",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.damageResistance": "Damage Resistance",
   "anima.ui.tabs.domine": "Domine",
