UPDATED - Custom die UI names

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -496,8 +496,13 @@
   "anima.ui.settings.advancedSettings.defenseType.normal.title": "Normal",
   "anima.ui.settings.advancedSettings.defenseType.title": "Type de défense",
   "anima.ui.settings.advancedSettings.doubles": "Ouverte avec des doubles",
-  "anima.ui.settings.advancedSettings.fumbles.title": "Marge de Fumble",
   "anima.ui.settings.advancedSettings.openRolls.title": "Marge d'ouverte",
+  "anima.ui.settings.advancedSettings.fumbles.title": "Marge de Fumble",
+  "anima.ui.settings.advancedSettings.characteristicDie.title": "Dado de Características",
+  "anima.ui.settings.advancedSettings.initiativeDie.title": "Dado de iniciativa",
+  "anima.ui.settings.advancedSettings.resistanceDie.title": "Dado de resistencias",
+  "anima.ui.settings.advancedSettings.abilityDie.title": "Dado de habilidades",
+  "anima.ui.settings.advancedSettings.abilityMasteryDie.title": "Dado de maestría",
   "anima.ui.settings.advancedSettings.title": "Paramètres avancés",
   "anima.ui.settings.automationOptions.title": "Automation options",
   "anima.ui.settings.automationOptions.calculateFatigueModifier.title": "Calculate fatigue modifier",
