--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -530,8 +530,13 @@
   "anima.ui.settings.advancedSettings.defenseType.normal.title": "Normal",
   "anima.ui.settings.advancedSettings.defenseType.title": "Defense type",
   "anima.ui.settings.advancedSettings.doubles": "Open roll with doubles",
-  "anima.ui.settings.advancedSettings.fumbles.title": "Fumble Range",
   "anima.ui.settings.advancedSettings.openRolls.title": "Open Roll Range",
+  "anima.ui.settings.advancedSettings.fumbles.title": "Fumble Range",
+  "anima.ui.settings.advancedSettings.characteristicDie.title": "Dado de Características",
+  "anima.ui.settings.advancedSettings.initiativeDie.title": "Dado de iniciativa",
+  "anima.ui.settings.advancedSettings.resistanceDie.title": "Dado de resistencias",
+  "anima.ui.settings.advancedSettings.abilityDie.title": "Dado de habilidades",
+  "anima.ui.settings.advancedSettings.abilityMasteryDie.title": "Dado de maestría",
   "anima.ui.settings.advancedSettings.title": "Advanced Settings",
   "anima.ui.settings.automationOptions.title": "Automation options",
   "anima.ui.settings.automationOptions.calculateFatigueModifier.title": "Calculate fatigue modifier",
