--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -531,8 +531,13 @@
   "anima.ui.settings.advancedSettings.defenseType.normal.title": "Normal",
   "anima.ui.settings.advancedSettings.defenseType.title": "Tipo de defensa",
   "anima.ui.settings.advancedSettings.doubles": "Abierta con dobles",
-  "anima.ui.settings.advancedSettings.fumbles.title": "Rango de Pifia",
   "anima.ui.settings.advancedSettings.openRolls.title": "Rango de Abierta",
+  "anima.ui.settings.advancedSettings.fumbles.title": "Rango de Pifia",
+  "anima.ui.settings.advancedSettings.characteristicDie.title": "Dado de Características",
+  "anima.ui.settings.advancedSettings.initiativeDie.title": "Dado de iniciativa",
+  "anima.ui.settings.advancedSettings.resistanceDie.title": "Dado de resistencias",
+  "anima.ui.settings.advancedSettings.abilityDie.title": "Dado de habilidades",
+  "anima.ui.settings.advancedSettings.abilityMasteryDie.title": "Dado de maestría",
   "anima.ui.settings.advancedSettings.title": "Opciones avanzadas",
   "anima.ui.settings.automationOptions.title": "Opciones de automatización",
   "anima.ui.settings.automationOptions.calculateFatigueModifier.title": "Calcular penalizador por cansancio",
