UPDATED - Macro bar
Added getCustomMacroButtons Hook
Updated z index to show them below foundry macro context menu

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -784,5 +784,7 @@
   "macros.damageCalculator.dialog.damage.title": "Damage",
   "macros.damageCalculator.dialog.defense.title": "Defense",
   "macros.damageCalculator.dialog.ta.title": "AT",
-  "macros.damageCalculator.dialog.title": "Damage calculator"
+  "macros.damageCalculator.dialog.title": "Damage calculator",
+  "customHotbar.damageCalculator": "Damage calculator",
+  "customHotbar.sendAttack": "Send attack"
 }
